front- and backend created

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <main>Loading...</main>
-
+Boom
     <script src="lib/es6-shim.min.js"></script>
     <script src="lib/angular2-polyfills.js"></script>
     <script src="lib/traceur-runtime.js"></script>
