--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,31 +1,42 @@
-<!doctype html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>template</title>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Angular 2 QuickStart JS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
 
-    <main>Loading...</main>
-Boom
-    <script src="lib/es6-shim.min.js"></script>
-    <script src="lib/angular2-polyfills.js"></script>
-    <script src="lib/traceur-runtime.js"></script>
-    <script src="lib/system-csp-production.src.js"></script>
-    <script src="lib/Reflect.js"></script>
+  <!-- 1. Load libraries -->
+  <!-- IE required polyfill -->
+  <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
 
-    <script>
-      System.config({defaultJSExtensions: true});
-    </script>
+  <script src="https://unpkg.com/zone.js@0.6.17?main=browser"></script>
+  <script src="https://unpkg.com/reflect-metadata@0.1.3"></script>
 
-    <script src="lib/angular2.js"></script>
-    <script src="lib/Rx.js"></script>
+  <script src="https://unpkg.com/rxjs@5.0.0-beta.11/bundles/Rx.umd.js"></script>
+  <script src="https://unpkg.com/@angular/core/bundles/core.umd.js"></script>
+  <script src="https://unpkg.com/@angular/common/bundles/common.umd.js"></script>
+  <script src="https://unpkg.com/@angular/compiler/bundles/compiler.umd.js"></script>
+  <script src="https://unpkg.com/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
+  <script src="https://unpkg.com/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
 
-    <script>
-      System.import('index').catch(console.log.bind(console));
-    </script>
+  <!-- 2. Load our 'modules' -->
+  <script src='app/app.component.js'></script>
+  <script src='app/app.module.js'></script>
+  <script src='app/main.js'></script>
 
-  </body>
+</head>
+
+<!-- 3. Display the application -->
+<body>
+<my-app>Loading...</my-app>
+
+</body>
+
 </html>
+
+
+<!--
+Copyright 2016 Google Inc. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at http://angular.io/license
+-->
