--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,42 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Angular 2 QuickStart JS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-
-  <!-- 1. Load libraries -->
-  <!-- IE required polyfill -->
-  <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
-
-  <script src="https://unpkg.com/zone.js@0.6.17?main=browser"></script>
-  <script src="https://unpkg.com/reflect-metadata@0.1.3"></script>
-
-  <script src="https://unpkg.com/rxjs@5.0.0-beta.11/bundles/Rx.umd.js"></script>
-  <script src="https://unpkg.com/@angular/core/bundles/core.umd.js"></script>
-  <script src="https://unpkg.com/@angular/common/bundles/common.umd.js"></script>
-  <script src="https://unpkg.com/@angular/compiler/bundles/compiler.umd.js"></script>
-  <script src="https://unpkg.com/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
-  <script src="https://unpkg.com/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
-
-  <!-- 2. Load our 'modules' -->
-  <script src='app/app.component.js'></script>
-  <script src='app/app.module.js'></script>
-  <script src='app/main.js'></script>
-
+  <title>Hello World</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.33.3/es6-shim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.20/system-polyfills.js"></script>
+  <script src="https://code.angularjs.org/2.0.0-beta.6/angular2-polyfills.js"></script>
+  <script src="https://code.angularjs.org/tools/system.js"></script>
+  <script src="https://code.angularjs.org/tools/typescript.js"></script>
+  <script src="https://code.angularjs.org/2.0.0-beta.6/Rx.js"></script>
+  <script src="https://code.angularjs.org/2.0.0-beta.6/angular2.dev.js"></script>
+  <script>
+    System.config({
+      transpiler: 'typescript',
+      typescriptOptions: { emitDecoratorMetadata: true },
+      packages: {'app': {defaultExtension: 'ts'}}
+    });
+    System.import('/angular2/src/app/environment_main')
+      .then(null, console.error.bind(console));
+  </script>
 </head>
-
-<!-- 3. Display the application -->
 <body>
-<my-app>test</my-app>
-
+<vesseltrip>Loading...</vesseltrip>
 </body>
-
 </html>
-
-
-<!--
-Copyright 2016 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
