--- a/frontend/app/html/ship-list.html
+++ b/frontend/app/html/ship-list.html
@@ -1,7 +1,7 @@
-<h2>Ship List</h2>
+<h2>Vessel List</h2>
 <p><i>Pick a ship from the list</i></p>
 <ul>
-    <li *ngFor="let Ship of ships" (click)="selectShip(ship)">
+    <li *ngFor="let Vessel of ships" (click)="selectShip(ship)">
         {{hero.name}}
     </li>
 </ul>
