Added html & List-Components

--- a/frontend/app/main/index.html
+++ b/frontend/app/main/index.html
@@ -20,7 +20,7 @@
     <script src="https://unpkg.com/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
 
     <!-- 2. Load our 'modules' -->
-    <script src='../components/ship-list.ts'></script>
+    <script src='../components/VesselList.ts'></script>
     <script src='app/app.module.js'></script>
     <script src='main.ts'></script>
 
