--- a/frontend/app/main/index.html
+++ b/frontend/app/main/index.html
@@ -28,7 +28,7 @@
 
   <!-- 3. Display the application -->
   <body>
-    <vesseltripapp></vesseltripapp>
+    <application></application>
   </body>
 
 </html>
