--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Angular 2 QuickStart JS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfill -->
@@ -20,9 +20,9 @@
     <script src="https://unpkg.com/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
 
     <!-- 2. Load our 'modules' -->
-    <script src='../components/VesselList.ts'></script>
+    <script src='app/components/VesselList.ts'></script>
     <script src='app/app.module.js'></script>
-    <script src='main.ts'></script>
+    <script src='app/main/main.ts'></script>
 
   </head>
 
