--- a/frontend/traveledRoutes.html
+++ b/frontend/traveledRoutes.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>VesselTrip</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-  <link href="routes.css" rel="stylesheet">
+  <title>VesselTrip</title>
 </head>
 <body>
-
-<div id="map"></div>
-
-<li id="stationList">
-
-</li>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-<script src="routes.js"></script>
+	<div id="map"></div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+	<script src="index.js"></script>
 </body>
 </html>
