--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular 2 QuickStart JS</title>
+    <title>VesselTrip</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfill -->
@@ -23,20 +26,58 @@
     <script src='app/components/VesselList.ts'></script>
     <script src='app/app.module.js'></script>
     <script src='app/main/main.ts'></script>
+    <title>Full Width Pics - Start Bootstrap Template</title>
 
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/full-width-pics.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
-
   <!-- 3. Display the application -->
-  <body>
-    <application></application>
-   Test
-  </body>
+  <body class="full">
 
+  <base href="/">
+
+
+  <application></application>
+
+    <!-- Full Width Image Header with Logo -->
+    <!-- Image backgrounds are set within the full-width-pics.css file. -->
+    <header>
+      <img class="img-responsive img-center" src="shipadvior.png" alt="">
+      <h1 class="text-white">Rate your Vessel</h1>
+      <form class="form-inline">
+        <div class="form-group">
+          <input class="form-control input-lg" type="search" placeholder="MIU">
+        </div>
+        <button class="btn btn-primary btn-lg">Go</button>
+      </form>
+    </header>
+    <!-- Content Section -->
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <p class="text-white">Made with &#9829; by DO!Hack 2016</p>
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </footer>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
 
-
-<!-- 
-Copyright 2016 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
