--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,83 +1,24 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>VesselTrip</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- 1. Load libraries -->
-    <!-- IE required polyfill -->
-    <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
-
-    <script src="https://unpkg.com/zone.js@0.6.17?main=browser"></script>
-    <script src="https://unpkg.com/reflect-metadata@0.1.3"></script>
-
-    <script src="https://unpkg.com/rxjs@5.0.0-beta.11/bundles/Rx.umd.js"></script>
-    <script src="https://unpkg.com/@angular/core/bundles/core.umd.js"></script>
-    <script src="https://unpkg.com/@angular/common/bundles/common.umd.js"></script>
-    <script src="https://unpkg.com/@angular/compiler/bundles/compiler.umd.js"></script>
-    <script src="https://unpkg.com/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
-    <script src="https://unpkg.com/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
-
-    <!-- 2. Load our 'modules' -->
-    <script src='app/components/VesselList.ts'></script>
-    <script src='app/app.module.js'></script>
-    <script src='app/main/main.ts'></script>
-    <title>Full Width Pics - Start Bootstrap Template</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/full-width-pics.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <!-- 3. Display the application -->
-  <body class="full">
-
+<html>
+<head>
+  <!-- Set the base href -->
   <base href="/">
-
-
-  <application></application>
-
-    <!-- Full Width Image Header with Logo -->
-    <!-- Image backgrounds are set within the full-width-pics.css file. -->
-    <header>
-      <img class="img-responsive img-center" src="shipadvior.png" alt="">
-      <h1 class="text-white">Rate your Vessel</h1>
-      <form class="form-inline">
-        <div class="form-group">
-          <input class="form-control input-lg" type="search" placeholder="MIU">
-        </div>
-        <button class="btn btn-primary btn-lg">Go</button>
-      </form>
-    </header>
-    <!-- Content Section -->
-    <!-- Footer -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <p class="text-white">Made with &#9829; by DO!Hack 2016</p>
-          </div>
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.container -->
-    </footer>
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+  <title>Router Sample</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <!-- Polyfill(s) for older browsers -->
+  <script src="node_modules/core-js/client/shim.min.js"></script>
+  <script src="node_modules/zone.js/dist/zone.js"></script>
+  <script src="node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="node_modules/systemjs/dist/system.src.js"></script>
+  <script src="systemjs.config.js"></script>
+  <script>
+    System.import('app')
+            .catch(function(err){ console.error(err); });
+  </script>
+</head>
+<body>
+<application>loading...</application>
+</body>
 </html>
-
