--- a/frontend/vessel.html
+++ b/frontend/vessel.html
@@ -162,7 +162,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy;VesselTrip 2016</p>
                 </div>
             </div>
             <!-- /.row -->
