--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -60,26 +60,14 @@
     <!-- /.container -->
 </nav>
 
-<!-- Full Width Image Header with Logo -->
-<!-- Image backgrounds are set within the full-width-pics.css file. -->
-<header>
-    <img class="img-responsive img-center" src="/img/vesseltrip.png" alt="">
-
-    <h1 class="text-white">Rate your Vessel</h1>
-    <form class="form-inline">
-        <div class="form-group">
-            <input class="form-control input-lg" type="search" placeholder="Type a MIU...">
-        </div>
-        <button class="btn btn-primary btn-lg">Go</button>
-
-    </form>
-
-</header>
-
-
 <!-- Content Section -->
 
+<div class="row"></div>
 
+<div class="well-lg center-block">
+    Kontaktieren Sie uns auf dem jährlichen Maritime-Hackathon!!! <br>
+    <a href="http://maritimehackathon.com/contact" class="btn btn-info">Maritime Hackathon</a>
+</div>
 <!-- Footer -->
 <footer>
     <div class="container">
