--- a/frontend/vessel.html
+++ b/frontend/vessel.html
@@ -71,63 +71,27 @@
                     <form class="form-horizontal">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Crew</label>
-                            <div class="col-sm-10 rating">
-                                <input type="radio" id="star5" name="rating" value="5" />
-                                <label for="star5" title="Awesome - 5 stars"></label>
-                                <input type="radio" id="star4" name="rating" value="4" />
-                                <label for="star4" title="Pretty good - 4 stars"></label>
-                                <input type="radio" id="star3" name="rating" value="3" />
-                                <label for="star3" title="Meh - 3 stars"></label>
-                                <input type="radio" id="star2" name="rating" value="2" />
-                                <label for="star2" title="Kinda bad - 2 stars"></label>
-                                <input type="radio" id="star1" name="rating" value="1" />
-                                <label for="star1" title="Sucks big time - 1 star"></label>
+                            <div class="col-sm-10">
+                                <input class="form-control" type="number">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Captain</label>
-                            <div class="col-sm-10 rating">
-                                <input type="radio" id="star5" name="rating" value="5" />
-                                <label for="star5" title="Awesome - 5 stars"></label>
-                                <input type="radio" id="star4" name="rating" value="4" />
-                                <label for="star4" title="Pretty good - 4 stars"></label>
-                                <input type="radio" id="star3" name="rating" value="3" />
-                                <label for="star3" title="Meh - 3 stars"></label>
-                                <input type="radio" id="star2" name="rating" value="2" />
-                                <label for="star2" title="Kinda bad - 2 stars"></label>
-                                <input type="radio" id="star1" name="rating" value="1" />
-                                <label for="star1" title="Sucks big time - 1 star"></label>
+                            <div class="col-sm-10">
+                                <input class="form-control" type="number">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Cabin</label>
-                             <div class="col-sm-10 rating">
-                                <input type="radio" id="star5" name="rating" value="5" />
-                                <label for="star5" title="Awesome - 5 stars"></label>
-                                <input type="radio" id="star4" name="rating" value="4" />
-                                <label for="star4" title="Pretty good - 4 stars"></label>
-                                <input type="radio" id="star3" name="rating" value="3" />
-                                <label for="star3" title="Meh - 3 stars"></label>
-                                <input type="radio" id="star2" name="rating" value="2" />
-                                <label for="star2" title="Kinda bad - 2 stars"></label>
-                                <input type="radio" id="star1" name="rating" value="1" />
-                                <label for="star1" title="Sucks big time - 1 star"></label>
+                            <div class="col-sm-10">
+                                <input class="form-control" type="number">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Food</label>
-                            <div class="col-sm-10 rating">
-                                <input type="radio" id="star5" name="rating" value="5" />
-                                <label for="star5" title="Awesome - 5 stars"></label>
-                                <input type="radio" id="star4" name="rating" value="4" />
-                                <label for="star4" title="Pretty good - 4 stars"></label>
-                                <input type="radio" id="star3" name="rating" value="3" />
-                                <label for="star3" title="Meh - 3 stars"></label>
-                                <input type="radio" id="star2" name="rating" value="2" />
-                                <label for="star2" title="Kinda bad - 2 stars"></label>
-                                <input type="radio" id="star1" name="rating" value="1" />
-                                <label for="star1" title="Sucks big time - 1 star"></label>
-                            </div>o
+                            <div class="col-sm-10">
+                                <input class="form-control" type="number">
+                            </div>
                         </div>
                     </form>
                 </div>
