--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -53,6 +53,9 @@
                 <li>
                     <a href="contact.html">Contact</a>
                 </li>
+                <li>
+                    <a href="rating.html">Rating</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
