--- a/frontend/vessel.html
+++ b/frontend/vessel.html
@@ -54,6 +54,9 @@
                     <li>
                         <a href="#">Contact</a>
                     </li>
+                    <li>
+                        <a href="rating.html">Rating</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
