--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -24,7 +24,7 @@
     <![endif]-->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="explore.js" type="javascript"></script>
+    <script src="explore.js" type="text/javascript" language="JavaScript"></script>
 
 </head>
 
@@ -90,6 +90,25 @@ Explore the Data thats available!
         </tbody>
     </table>
 </div>
+
+
+<div id="ports" class="table-responsive">
+    <table class="table">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Lon</th>
+            <th>Lat</th>
+        </tr>
+        </thead>
+        <tbody id="ports_entries">
+        </tbody>
+    </table>
+</div>
+
+
 </div>
 
 <!-- Footer -->
