--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand text-uppercase" href="#">Vesseltrip</a>
+            <a class="navbar-brand text-uppercase" href="index.html">Vesseltrip</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
