--- a/frontend/mytrips.html
+++ b/frontend/mytrips.html
@@ -64,18 +64,16 @@
     <!-- /.container -->
 </nav>
 
-<!-- Content Section -->
-
-<button value="Login" ></button>
-
-<div id="map"></div>
+<div class="mapContainer">
+    <div id="map" class="map"></div>
+</div>
 
 <!-- Footer -->
-<footer>
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-white">Made with &#9829; by DO!Hack 2016</p>
+                <p>Made with &#9829; by DO!Hack 2016</p>
             </div>
         </div>
         <!-- /.row -->
