--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -72,7 +72,7 @@
     <a href="http://maritimehackathon.com/contact" class="btn btn-info">Maritime Hackathon</a>
 </div>
 <!-- Footer -->
-<footer>
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
