--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -90,7 +90,7 @@ Explore the Data thats available!
 
 
 <!-- Footer -->
-<footer>
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
