--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,7 +84,7 @@
 
 
 <!-- Footer -->
-<footer>
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
