--- a/frontend/rating.html
+++ b/frontend/rating.html
@@ -116,7 +116,7 @@
         </span>
 </div>
 
-<footer>
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
