--- a/frontend/vessel.html
+++ b/frontend/vessel.html
@@ -161,7 +161,7 @@
 
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
