--- a/frontend/mytrips.html
+++ b/frontend/mytrips.html
@@ -64,6 +64,10 @@
     <!-- /.container -->
 </nav>
 
+<div class="ratingOutput">
+    <ul id="ratingOutput" class="ratingList"></ul>
+</div>
+
 <div class="mapContainer">
     <div id="map" class="map"></div>
 </div>
