--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="full">
+<body>
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
