--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,7 +66,7 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header>
-    <img class="img-responsive img-center" src="/img/vesseltrip.png" alt="">
+    <img class="img-responsive img-center" src="/frontend/img/vesseltrip.png" alt="">
 
     <h1 class="text-white">Rate your Vessel</h1>
     <form class="form-inline">
