--- a/frontend/mytrips.html
+++ b/frontend/mytrips.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body class="full">
+<body>
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -86,12 +86,12 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="/frontend/js/jquery.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
-<script src="js/routes.js"></script>
+<script src="/frontend/js/routes.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="/frontend/js/bootstrap.min.js"></script>
 
 </body>
 
