--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body class="full">
+<body>
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
